# GeniESP32-of-the-Lamp

./: README.md
retro/: example1.jon.csv  parse_i2c_logs.py  sample.sigrok.dump  sample.sigrok_with_nak.dump  sigrok2jon.out.csv  sigrok2jon.py
retro/sigrok_btn_decoder/: __init__.py  pd.py
sources/: CMakeLists.txt  README.md  sdkconfig
sources/main/: CMakeLists.txt  Kconfig.projbuild  URLs.txt  genie_ascii_art.c  genius_connection.c  genius_connection.h  globalvars.h  httpd.c  httpd.h  i2c_lamp_protocol.c  i2c_lamp_protocol.h  main.c
